feat(accounts): add accounts list page

--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -1,5 +1,6 @@
 {
    "account" : "Účet",
+   "accounts" : "Accounts",
    "account_balance" : "Zůstatek na účtu",
    "account_details" : "Detaily účtu",
    "account_id" : "ID účtu",
