--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -1,5 +1,6 @@
 {
     "account": "Konto",
+    "accounts" : "Accounts",
     "account_balance": "Guthaben",
     "account_details": "Kontodetails",
     "account_id": "Konto-ID",
