--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1,5 +1,6 @@
 {
    "account" : "Λογαριασμός",
+   "accounts" : "Accounts",
    "account_balance" : "Υπόλοιπο λογαριασμού",
    "account_details" : "Λεπτομέρειες λογαριασμού",
    "account_id" : "ID λογαριασμού",
