--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -1,5 +1,6 @@
 {
     "account": "Account",
+    "accounts" : "Accounts",
     "account_balance": "Account Balance",
     "account_details": "Account Details",
     "account_id": "Account ID",
