--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -1,5 +1,6 @@
 {
     "account": "Tili",
+    "accounts" : "Accounts",
     "account_balance": "Tilin saldo",
     "account_details": "Tilin tiedot",
     "account_id": "Tilinumero",
