--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1,5 +1,6 @@
 {
     "account": "Conta",
+    "accounts" : "Accounts",
     "account_balance": "saldo da Conta",
     "account_details": "Detalles da conta",
     "account_id": "ID da conta",
