--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1,5 +1,6 @@
 {
    "account" : "खाता",
+   "accounts" : "Accounts",
    "account_balance" : "खाते की शेष राशि",
    "account_details" : "खाता विवरण",
    "account_id" : "खाता ID",
