--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -1,5 +1,6 @@
 {
     "account": "Account",
+    "accounts" : "Accounts",
     "account_balance": "Saldo Akun",
     "account_details": "Detail catatan",
     "account_id": "Account ID",
