--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -1,5 +1,6 @@
 {
     "account": "Account",
+    "accounts" : "Accounts",
     "account_balance": "Saldo",
     "account_details": "Dettagli account",
     "account_id": "Account ID",
