--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1,5 +1,6 @@
 {
     "account": "アカウント",
+    "accounts" : "Accounts",
     "account_balance": "アカウントの残高",
     "account_details": "アカウントの詳細",
     "account_id": "アカウントID",
