--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1,5 +1,6 @@
 {
     "account": "Sąskaita",
+    "accounts" : "Accounts",
     "account_balance": "Sąskaitos balansas",
     "account_details": "Paskyros Duomenys",
     "account_id": "Sąskaitos ID",
