--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -1,5 +1,6 @@
 {
     "account": "Account",
+    "accounts" : "Accounts",
     "account_balance": "Rekening saldo",
     "account_details": "Accountgegevens",
     "account_id": "Rekening-ID",
