--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -1,5 +1,6 @@
 {
     "account": "Konto",
+    "accounts" : "Accounts",
     "account_balance": "Balans konta",
     "account_details": "Szczegóły konta",
     "account_id": "ID konta",
