--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -1,5 +1,6 @@
 {
    "account" : "Account",
+   "accounts" : "Accounts",
    "account_balance" : "Saldo da conta",
    "account_details" : "Detalhes da conta",
    "account_id" : "ID da conta",
