--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -1,5 +1,6 @@
 {
    "account" : "Cont",
+   "accounts" : "Accounts",
    "account_balance" : "Sold disponibil în cont",
    "account_details" : "Detalii cont",
    "account_id" : "ID-ul contului",
