--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1,5 +1,6 @@
 {
     "account": "Аккаунт",
+    "accounts" : "Accounts",
     "account_balance": "Баланс аккаунта",
     "account_details": "Детали аккаунта",
     "account_id": "ID аккаунта",
