--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -1,5 +1,6 @@
 {
    "account" : "Račun",
+   "accounts" : "Accounts",
    "account_balance" : "Saldo računa",
    "account_details" : "Detalji računa",
    "account_id" : "Račun ID",
