--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1,5 +1,6 @@
 {
     "account": "Účet",
+    "accounts" : "Accounts",
     "account_balance": "Zostatok na účte",
     "account_details": "Detaily účtu",
     "account_id": "ID účtu",
