--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -1,5 +1,6 @@
 {
     "account": "Nalog",
+    "accounts" : "Accounts",
     "account_balance": "Saldo Naloga",
     "account_details": "Detalji naloga",
     "account_id": "ID Naloga",
