--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1,5 +1,6 @@
 {
     "account": "Налог",
+    "accounts" : "Accounts",
     "account_balance": "Салдо Налога",
     "account_details": "Детаљи налога",
     "account_id": "ID Налога",
