--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1,5 +1,6 @@
 {
    "account" : "Hesap",
+   "accounts" : "Accounts",
    "account_balance" : "Hesap bakiyesi",
    "account_details" : "Hesap Bilgileri",
    "account_id" : "Hesap No.",
