--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1,5 +1,6 @@
 {
     "account": "Аккаунт",
+    "accounts" : "Accounts",
     "account_balance": "Залишок на рахунку",
     "account_details": "Подробиці аккаунта",
     "account_id": "ID аккаунта",
