--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -1,5 +1,6 @@
 {
     "account": "帐户",
+    "accounts" : "Accounts",
     "account_balance": "帐户余额",
     "account_details": "帐户详细信息",
     "account_id": "帐户 ID",
