--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1,5 +1,6 @@
 {
     "account": "帳戶",
+    "accounts" : "Accounts",
     "account_balance": "帳戶餘額",
     "account_details": "帳戶詳細信息",
     "account_id": "帳戶 ID",
