--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1,5 +1,6 @@
 {
    "account" : "Compte",
+   "accounts" : "Accounts",
    "account_balance" : "Saldo del compte",
    "account_details" : "Detalls del compte",
    "account_id" : "ID de compte",
