--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1,5 +1,6 @@
 {
     "account": "Cuenta",
+    "accounts" : "Accounts",
     "account_balance": "Saldo de la Cuenta",
     "account_details": "Detalles de Cuenta",
     "account_id": "ID de Cuenta",
