--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -1,5 +1,6 @@
 {
     "account": "Conta",
+    "accounts" : "Accounts",
     "account_balance": "Saldo da Conta",
     "account_details": "Detalhes de Conta",
     "account_id": "ID de Conta",
