feat(alias): add getAliases to burstjs/core and desktop wallet

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1,5 +1,6 @@
 {
    "account" : "Сметка",
+   "accounts" : "Accounts",
    "account_balance" : "Наличност по сметка",
    "account_details" : "Данни за сметка",
    "account_id" : "Сметка ID",
@@ -22,7 +23,7 @@
    "advanced_transaction_operations" : "Разширени операции със сделки",
    "advanced_uppercase" : "Допълнително",
    "alias" : "Псевдоним",
-   "Aliases" : "Aliases",
+   "aliases" : "Aliases",
    "aliases_owned" : "Собствени псевдоними",
    "aliases_to_account_id" : "Псевдоними към сметка ID",
    "aliases_to_uri" : "Псевдоними към URI",
