--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Operacions de transacció avançada",
    "advanced_uppercase" : "Avançat",
    "alias" : "Àlies",
-   "Aliases" : "Àlies",
+   "aliases" : "Àlies",
    "aliases_owned" : "Àlies en Propietat",
    "aliases_to_account_id" : "Àlies pel ID del Compte",
    "aliases_to_uri" : "Àlies a URI",
