--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Pokročilé operace transakce",
    "advanced_uppercase" : "Více",
    "alias" : "Alias",
-   "Aliases" : "Aliasy",
+   "aliases" : "Aliasy",
    "aliases_owned" : "Vlastněné aliasy",
    "aliases_to_account_id" : "Aliasy k ID účtu",
    "aliases_to_uri" : "Aliasy URI",
