--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Προηγμένες λειτουργίες συναλλαγών",
    "advanced_uppercase" : "Για προχωρημένους",
    "alias" : "Ψευδώνυμο",
-   "Aliases" : "Ψευδώνυμα",
+   "aliases" : "Ψευδώνυμα",
    "aliases_owned" : "Ψευδώνυμα που ανήκουν",
    "aliases_to_account_id" : "Ψευδώνυμα του λογαριασμού",
    "aliases_to_uri" : "Ψευδώνυμα σε URI",
