--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Advanced Transaction Operations",
     "advanced_uppercase": "Advanced",
     "alias": "Alias",
-    "Aliases": "Aliases",
+    "aliases": "Aliases",
     "aliases_owned": "Aliases Owned",
     "aliases_to_account_id": "Aliases to Account ID",
     "aliases_to_uri": "Aliases to URI",
