--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Operaciones Avanzadas de Transacciones",
     "advanced_uppercase": "Avanzado",
     "alias": "Alias",
-    "Aliases": "Alias",
+    "aliases": "Alias",
     "aliases_owned": "Alias en Propiedad",
     "aliases_to_account_id": "Alias a ID de Cuenta",
     "aliases_to_uri": "Alias a URI",
