--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Kehittyneet tapahtumien operaatiot",
     "advanced_uppercase": "Kehittynyt",
     "alias": "Alias",
-    "Aliases": "Aliakset",
+    "aliases": "Aliakset",
     "aliases_owned": "Omistamasi aliakset",
     "aliases_to_account_id": "Aliakset tilinumeroon",
     "aliases_to_uri": "Aliakset osoitteeseen",
