--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Opérations de transaction avancées",
     "advanced_uppercase": "Avancé",
     "alias": "Alias",
-    "Aliases": "Alias",
+    "aliases": "Alias",
     "aliases_owned": "Vos alias",
     "aliases_to_account_id": "Lier l'alias à un numéro de compte",
     "aliases_to_uri": "Alias vers URI",
