--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Operasi Maju Transaksi",
     "advanced_uppercase": "Lanjutan",
     "alias": "Alias",
-    "Aliases": "Alias",
+    "aliases": "Alias",
     "aliases_owned": "Alias yang dimiliki",
     "aliases_to_account_id": "Alias untuk Account ID",
     "aliases_to_uri": "Alias ke URI",
