--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Operazioni di transazione avanzata",
     "advanced_uppercase": "Advanced",
     "alias": "Alias",
-    "Aliases": "Alias",
+    "aliases": "Alias",
     "aliases_owned": "Alias Posseduti",
     "aliases_to_account_id": "Alias ad Account ID",
     "aliases_to_uri": "Alias a URI",
