--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "高度なトランザクション操作",
     "advanced_uppercase": "高度な",
     "alias": "エイリアス",
-    "Aliases": "エイリアス",
+    "aliases": "エイリアス",
     "aliases_owned": "所有されているエイリアス",
     "aliases_to_account_id": "エイリアスからアカウントIDへ",
     "aliases_to_uri": "URLを持つエイリアス",
