--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Išplėstinės transakcijų operacijos",
     "advanced_uppercase": "Pažangus",
     "alias": "Pseudonimas",
-    "Aliases": "Pseudonimai",
+    "aliases": "Pseudonimai",
     "aliases_owned": "Turimi pseudonimai",
     "aliases_to_account_id": "Sąskaitos ID pseudonimai",
     "aliases_to_uri": "Pseudonimai į URI",
