--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Geavanceerde Transactie Opties",
     "advanced_uppercase": "Geavanceerd",
     "alias": "Alias",
-    "Aliases": "Aliassen",
+    "aliases": "Aliassen",
     "aliases_owned": "Uw Aliassen",
     "aliases_to_account_id": "Alias naar Account ID",
     "aliases_to_uri": "Aliassen verwijzen naar URI",
