--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Zaawansowane opcje transakcji",
     "advanced_uppercase": "Zaawansowane",
     "alias": "Alias",
-    "Aliases": "Aliasy",
+    "aliases": "Aliasy",
     "aliases_owned": "Posiadane aliasy",
     "aliases_to_account_id": "Aliasy do ID konta",
     "aliases_to_uri": "Aliasy do URI",
