--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Operações Avançadas de Transação",
    "advanced_uppercase" : "Avançado",
    "alias" : "Pseudônimo",
-   "Aliases" : "Aliases",
+   "aliases" : "Aliases",
    "aliases_owned" : "Pseudônimos que Possui",
    "aliases_to_account_id" : "Pseudônimos para o ID da Conta",
    "aliases_to_uri" : "Pseudônimos para URI",
