--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Operações Avançadas de Transações",
     "advanced_uppercase": "Avançado",
     "alias": "Álias",
-    "Aliases": "Aliases",
+    "aliases": "Aliases",
     "aliases_owned": "Aliases em Propriedade",
     "aliases_to_account_id": "Aliases para o ID da conta",
     "aliases_to_uri": "Alias a URI",
