--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Operații avansate pentru tranzacție",
    "advanced_uppercase" : "Avansate",
    "alias" : "Alias",
-   "Aliases" : "Aliasuri",
+   "aliases" : "Aliasuri",
    "aliases_owned" : "Alias-uri Deținute",
    "aliases_to_account_id" : "Alias-urile de la ID-ul contului",
    "aliases_to_uri" : "Alias-uri la URI",
