--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Расширенные действия с транзакциями",
     "advanced_uppercase": "Дополнительно",
     "alias": "Псевдоним",
-    "Aliases": "Псевдонимы",
+    "aliases": "Псевдонимы",
     "aliases_owned": "Собственные Псевдонимы",
     "aliases_to_account_id": "Псевдоним для ID аккаунта",
     "aliases_to_uri": "Псевдонимы для URI",
