--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -23,7 +23,7 @@
    "advanced_transaction_operations" : "Napredne transakcijske operacije",
    "advanced_uppercase" : "Napredno",
    "alias" : "Pseudonim",
-   "Aliases" : "Pseudonimi",
+   "aliases" : "Pseudonimi",
    "aliases_owned" : "Pseudonimi u posjedu",
    "aliases_to_account_id" : "Pseudonimi do račun ID",
    "aliases_to_uri" : "Pseudonimi prema URI",
