--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Pokročilé transakčné operácie",
     "advanced_uppercase": "Rozšírené",
     "alias": "Alias",
-    "Aliases": "Aliasy",
+    "aliases": "Aliasy",
     "aliases_owned": "Aliasy vo vlastníctve",
     "aliases_to_account_id": "Aliasy na ID účtu",
     "aliases_to_uri": "Aliasy pre URI",
