--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Napredne Transakcijske Operacije",
     "advanced_uppercase": "Napredno",
     "alias": "Alias",
-    "Aliases": "Aliasi",
+    "aliases": "Aliasi",
     "aliases_owned": "Aliasi Koje Posedujete",
     "aliases_to_account_id": "Alias-i prema ID nalogu",
     "aliases_to_uri": "Aliasi prema URI",
