--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "Додаткові дії з транзакціями",
     "advanced_uppercase": "Додатково",
     "alias": "Псевдонім",
-    "Aliases": "Аліаси",
+    "aliases": "Аліаси",
     "aliases_owned": "Власні Аліаси",
     "aliases_to_account_id": "Алiаси для ID аккаунта",
     "aliases_to_uri": "Аліаси для URI",
