--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -23,7 +23,7 @@
     "advanced_transaction_operations": "高级交易操作",
     "advanced_uppercase": "高级",
     "alias": "别名",
-    "Aliases": "别名",
+    "aliases": "别名",
     "aliases_owned": "拥有的别名",
     "aliases_to_account_id": "指向帐户 ID 的别名",
     "aliases_to_uri": "指向 URI 的别名",
