feat(qr): add request QR code workflow

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "La compra no s'ha lliurat a temps.",
    "purchase_refunded" : "Aquesta compra ha estat reemborsada.",
    "put_for_sale" : "Posar a la venda",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "Qtat",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Detalls de la transacció sense processar",
