--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Ostosta ei toimitettu ajoissa.",
     "purchase_refunded": "Tämän ostoksen hinta on palautettu.",
     "put_for_sale": "Aseta myyntiin",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Määrä",
     "quantity": "Määrä",
     "raw_transaction_details": "Transaktion tiedot",
