--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "La commande n'a pas été livrée à temps.",
     "purchase_refunded": "Cet achat a été remboursé.",
     "put_for_sale": "Mettre en vente",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Qté",
     "quantity": "Quantité",
     "raw_transaction_details": "Détails de la transaction brute",
