--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "The purchase was not delivered in time.",
    "purchase_refunded" : "This purchase has been refunded.",
    "put_for_sale" : "बिक्री के लिए रखा",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "मात्रा",
    "quantity" : "Quantity",
    "raw_transaction_details" : "कच्चे हस्तांतरण विवरण",
