--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Pembelian tidak dikirim tepat waktu.",
     "purchase_refunded": "Pembelian ini telah dikembalikan.",
     "put_for_sale": "Menempatkan Dijual",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "QTY",
     "quantity": "Kuantitas",
     "raw_transaction_details": "Rincian transaksi mentah",
