--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "購入が時間内に配信されませんでした。",
     "purchase_refunded": "この購入は払い戻しされました。",
     "put_for_sale": "販売にする",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "数量",
     "quantity": "数量",
     "raw_transaction_details": "未処理トランザクションの詳細",
