--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -668,6 +668,11 @@
     "purchase_not_delivered_in_time": "Zakup nie został dostarczony na czas.",
     "purchase_refunded": "Zakup został zwrócony.",
     "put_for_sale": "Wystaw na sprzedaż",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Ilość",
     "quantity": "Ilość",
     "raw_transaction_details": "Nieobrobione dane transakcji",
