--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Покупки не были доставлены вовремя.",
     "purchase_refunded": "Эта покупка была возмещена.",
     "put_for_sale": "Выставлен на продажу",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Кол-во",
     "quantity": "Количество",
     "raw_transaction_details": "Детали необработанной транзакции",
