--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Nákup nebol doručený včas.",
     "purchase_refunded": "Tento nákup vám bol vrátený.",
     "put_for_sale": "Na predaj",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Množ.",
     "quantity": "Množstvo",
     "raw_transaction_details": "Surové detaily transakcie",
