--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Kupovina nije isporučena na vreme.",
     "purchase_refunded": "Ova kupovina ne može biti refundirana.",
     "put_for_sale": "Stavite na Prodaju",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "QTY",
     "quantity": "Iznos",
     "raw_transaction_details": "Detalji Transakcije",
