--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Satınalma zamanında teslim edilmedi.",
    "purchase_refunded" : "Satın alma, geri iade edildi.",
    "put_for_sale" : "Satışa sür",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "MİKTAR",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Ham işlem ayrıntıları",
