--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Покупката не е доставена навреме.",
    "purchase_refunded" : "Тази покупка е била върната.",
    "put_for_sale" : "За продажба",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "К-во",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Данни за необработена сделка",
