--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Nákup nebyl doručen včas.",
    "purchase_refunded" : "Tento nákup byl refundován.",
    "put_for_sale" : "Vystavit k prodeji",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "Množ.",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Raw Transaction Details",
