--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Der Kauf wurde nicht rechtzeitig geliefert.",
     "purchase_refunded": "Dieser Kauf wurde zurückerstattet.",
     "put_for_sale": "Anbieten",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Menge",
     "quantity": "Menge",
     "raw_transaction_details": "Alle Details zur Transaktion",
