--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Το αγαθό δεν παραδόθηκε στο χρόνο του.",
    "purchase_refunded" : "This purchase has been refunded.",
    "put_for_sale" : "Τοποθέτηση προς πώληση",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "Ποσότητα",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Raw Transaction Details",
