--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -672,6 +672,11 @@
     "purchase_not_delivered_in_time": "The purchase was not delivered in time.",
     "purchase_refunded": "This purchase has been refunded.",
     "put_for_sale": "Put For Sale",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "QTY",
     "quantity": "Quantity",
     "raw_transaction_details": "Raw Transaction Details",
