--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "La compra no se entregó a tiempo.",
     "purchase_refunded": "Esta compra ha sido reembolsada.",
     "put_for_sale": "Poner a la Venta",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Cant.",
     "quantity": "Cantidad",
     "raw_transaction_details": "Datos sin procesar de la Transacción",
