--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "A compra non foi enviada a tempo.",
     "purchase_refunded": "Esta compra foi reembolsada.",
     "put_for_sale": "Pór á venda",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Cant.",
     "quantity": "Cantidade",
     "raw_transaction_details": "Datos sen procesar da transacción",
