--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Kupovina nije isporučena na vrijeme.",
     "purchase_refunded": "Ova kupovina je refundirana.",
     "put_for_sale": "Stavi na prodaju",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "QTY",
     "quantity": "Količina",
     "raw_transaction_details": "Detalji transakcije",
