--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "L'acquisto non è stato consegnato in tempo.",
     "purchase_refunded": "Questo acquisto è stato rimborsato.",
     "put_for_sale": "Metti in vendita",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Q. TÀ",
     "quantity": "Quantità",
     "raw_transaction_details": "Dettagli sulla transazione non processata",
