--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Pirkimas nebuvo pristatytas laiku.",
     "purchase_refunded": "Šis pirkinys buvo apmokėtas.",
     "put_for_sale": "Pateikti pardavimui",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "KIEKIS",
     "quantity": "Kiekis",
     "raw_transaction_details": "Transakcijos išsami informacija",
