--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "De aankoop werd niet op tijd geleverd.",
     "purchase_refunded": "Deze aankoop is terugbetaald.",
     "put_for_sale": "Neergezet voor Verkoop",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Aantal",
     "quantity": "Hoeveelheid",
     "raw_transaction_details": "Ruwe transactiedetails",
