--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "A compra não foi entregue a tempo.",
    "purchase_refunded" : "Esta compra foi reembolsada.",
    "put_for_sale" : "Colocar para venda",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "Qtd",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Detalhes da transação não processada",
