--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Cumpărătura nu a fost livrată la timp.",
    "purchase_refunded" : "Această achiziţie a fost rambursată.",
    "put_for_sale" : "Pune de vânzare",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "CANTIT",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Detalii tranzacție neprocesată",
