--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -659,6 +659,11 @@
    "purchase_not_delivered_in_time" : "Kupovina nije isporučena na vrijeme.",
    "purchase_refunded" : "This purchase has been refunded.",
    "put_for_sale" : "Stavi na prodaju",
+   "qr_code": "QR Code",
+   "your_address": "Your Address",
+   "request_burst": "Request BURST",
+   "immutable": "Immutable",
+   "generate_qr": "Generate QR",
    "qty" : "QTY",
    "quantity" : "Quantity",
    "raw_transaction_details" : "Detalji transakcije",
