--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Куповина није испоручена на време.",
     "purchase_refunded": "Ова куповинa не може бити рефундирана.",
     "put_for_sale": "Ставите на Продају",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "QTY",
     "quantity": "Износ",
     "raw_transaction_details": "Детаљи Трансакције",
