--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "Покупки не були доставлені вчасно.",
     "purchase_refunded": "Ця покупка була відшкодована.",
     "put_for_sale": "Виставлений на продаж",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "Кількість",
     "quantity": "Кількість",
     "raw_transaction_details": "RAW деталі транзакції",
