--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "购买未按时交付。",
     "purchase_refunded": "该购买已退款。",
     "put_for_sale": "出售",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "数量",
     "quantity": "数量",
     "raw_transaction_details": "原始交易详情",
