--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -659,6 +659,11 @@
     "purchase_not_delivered_in_time": "購買未按時交付。",
     "purchase_refunded": "該購買已退款。",
     "put_for_sale": "出售",
+    "qr_code": "QR Code",
+    "your_address": "Your Address",
+    "request_burst": "Request BURST",
+    "immutable": "Immutable",
+    "generate_qr": "Generate QR",
     "qty": "數量",
     "quantity": "數量",
     "raw_transaction_details": "原始交易詳情",
