--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Най-ниска продава",
   "market_delivery": "Доставка",
   "market_feedback": "Отзив от пазара",
+  "market_info": "Информация за пазара",
   "market_listing": "Списък стоки",
   "market_price_change": "Промяна цена",
   "market_purchase": "Покупка",
