--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Oferta més baixa",
   "market_delivery": "Lliurament del Mercat",
   "market_feedback": "Comentaris del Mercat",
+  "market_info": "Informació del mercat",
   "market_listing": "Llistat del Mercat",
   "market_price_change": "Canvi de Preu del Mercat",
   "market_purchase": "Compra del Mercat",
