--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Nejnižší poptávka",
   "market_delivery": "Dodávka",
   "market_feedback": "Reakce trhu",
+  "market_info": "Informace o trhu",
   "market_listing": "Nabídka",
   "market_price_change": "Změna tržní ceny",
   "market_purchase": "Nákup",
