--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Χαμηλότερη ζήτηση",
   "market_delivery": "Παράδοση στην Αγορά",
   "market_feedback": "Market Feedback",
+  "market_info": "Πληροφορίες αγοράς",
   "market_listing": "Market Listing",
   "market_price_change": "Μεταβολή της τιμής αγοράς",
   "market_purchase": "Αγορά αγαθού",
