--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Demanda Más Baja",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valoraciones del Mercado",
+  "market_info": "Información de mercado",
   "market_listing": "Listado en el Mercado",
   "market_price_change": "Variación en el Precio de Mercado",
   "market_purchase": "Compra de Mercado",
