--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Alin myyntihinta",
   "market_delivery": "Kauppapaikan toimitus",
   "market_feedback": "Palaute kauppapaikassa",
+  "market_info": "Markkinatiedot",
   "market_listing": "Kauppapaikan listaus",
   "market_price_change": "Markkinahinnan muutos",
   "market_purchase": "Osto kauppapaikasta",
