--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Offre de vente",
   "market_delivery": "Livraison sur le marché",
   "market_feedback": "Avis du marché",
+  "market_info": "Information du marché",
   "market_listing": "Annonces du marché",
   "market_price_change": "Les prix du marché ont évolué",
   "market_purchase": "Achat sur le marché",
