--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Demanda máis baixa",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valoración do mercado",
+  "market_info": "Información de mercado",
   "market_listing": "Listado no mercado",
   "market_price_change": "Cambio de prezo de mercado",
   "market_purchase": "Compra de mercado",
