--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -492,6 +492,7 @@
   "lowest_ask": "सबसे कम बोली",
   "market_delivery": "Market Delivery",
   "market_feedback": "Market Feedback",
+  "market_info": "बाजार की जानकारी",
   "market_listing": "Market Listing",
   "market_price_change": "Market Price Change",
   "market_purchase": "Market Purchase",
