--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Najniža prodaja",
   "market_delivery": "Tržišna dostava",
   "market_feedback": "Povratna poruka s tržišta",
+  "market_info": "Informacije o tržištu",
   "market_listing": "Popis tržišta",
   "market_price_change": "Promjena tržišne cijene",
   "market_purchase": "Kupovine na tržištu",
