--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Harga yang diminta terendah",
   "market_delivery": "Pasar pengiriman",
   "market_feedback": "Umpan balik dari pasar",
+  "market_info": "Informasi Pasar",
   "market_listing": "Daftar Pasar",
   "market_price_change": "Perubahan Harga Pasar",
   "market_purchase": "Pembelian pasar",
