--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Domanda più bassa",
   "market_delivery": "Consegna",
   "market_feedback": "Feedback mercato",
+  "market_info": "Informazioni di mercato",
   "market_listing": "Annuncio",
   "market_price_change": "Cambio del prezzo di mercato",
   "market_purchase": "Acquisto dal mercato",
