--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -492,6 +492,7 @@
   "lowest_ask": "最安額",
   "market_delivery": "商品の配達",
   "market_feedback": "マーケットのフィードバック",
+  "market_info": "市場情報",
   "market_listing": "マーケットの商品リスト",
   "market_price_change": "市場価格の変更",
   "market_purchase": "市場買付",
