--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Mažiausia prašoma kaina",
   "market_delivery": "Pristatymas",
   "market_feedback": "Rinkos atsiliepimas",
+  "market_info": "Rinkos informacija",
   "market_listing": "Prekių sąrašas",
   "market_price_change": "Rinkos kainos pokytis",
   "market_purchase": "Pirkimas",
