--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Laagste vraag",
   "market_delivery": "Markt levering",
   "market_feedback": "Marktplaats Feedback",
+  "market_info": "Marktinformatie",
   "market_listing": "Markt aanbieding",
   "market_price_change": "Prijsverandering van de markt",
   "market_purchase": "Markt aankoop",
