--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -501,6 +501,7 @@
   "lowest_ask": "Najniższa oferta sprzedaży",
   "market_delivery": "Dostawa",
   "market_feedback": "Informacja zwrotna",
+  "market_info": "Informacje rynkowe",
   "market_listing": "Oferty",
   "market_price_change": "Zmień cenę",
   "market_purchase": "Kup",
