--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Pedido mais baixo",
   "market_delivery": "Entrega do mercado",
   "market_feedback": "Feedback do mercado",
+  "market_info": "Informação de Mercado",
   "market_listing": "Listagem de mercadorias",
   "market_price_change": "Variação de preço do mercado",
   "market_purchase": "Compra de mercado",
