--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Procura Mais Baixa",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valorações do Mercado",
+  "market_info": "Informação de Mercado",
   "market_listing": "Listagem no Mercado",
   "market_price_change": "Variação no Preço de Mercado",
   "market_purchase": "Compra de Mercado",
