--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Vânzarea mai ieftină",
   "market_delivery": "Livrare pe piață",
   "market_feedback": "Feedback-ul pieţii",
+  "market_info": "Informații despre piață",
   "market_listing": "Listări Piaţă",
   "market_price_change": "Schimbările de Preţ pe Piaţă",
   "market_purchase": "Cumpărare din Piaţă",
