--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Минимальная покупка",
   "market_delivery": "Доставка магазином",
   "market_feedback": "Обратная связь магазина",
+  "market_info": "Информация о рынке",
   "market_listing": "Список рынка",
   "market_price_change": "Изменение рыночной цены",
   "market_purchase": "Покупка по рынку",
