--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Najnižší predaj",
   "market_delivery": "Doručenie trhoviska",
   "market_feedback": "Spätná väzba trhoviska",
+  "market_info": "Informácie o trhu",
   "market_listing": "Zoznam trhoviska",
   "market_price_change": "Zmena trhovej ceny",
   "market_purchase": "Nákup na trhovisku",
