--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Најнижа Продаја",
   "market_delivery": "Тржишна Достава",
   "market_feedback": "Повратна Порука са Тржишта",
+  "market_info": "Информације о тржишту",
   "market_listing": "Тржишни Списак",
   "market_price_change": "Промена Тржишне Цене",
   "market_purchase": "Куповина на Тржишту",
