--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -492,6 +492,7 @@
   "lowest_ask": "En düşük teklif",
   "market_delivery": "Market Delivery",
   "market_feedback": "Market Feedback",
+  "market_info": "Piyasa Bilgisi",
   "market_listing": "Market Listing",
   "market_price_change": "Piyasadaki Fiyat Değişikliği",
   "market_purchase": "Market Purchase",
