--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -492,6 +492,7 @@
   "lowest_ask": "Мінімальна ціна продажу",
   "market_delivery": "Доставка магазином",
   "market_feedback": "Зворотний зв'язок магазину",
+  "market_info": "Інформація про ринок",
   "market_listing": "Лістинг ринку",
   "market_price_change": "Зміна ринкової ціни",
   "market_purchase": "Купівля по Ринку",
