--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -492,6 +492,7 @@
   "lowest_ask": "最低卖单",
   "market_delivery": "市场交付",
   "market_feedback": "市场反馈",
+  "market_info": "市场信息",
   "market_listing": "市场列表",
   "market_price_change": "市场价格变化",
   "market_purchase": "市场购买",
