--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -492,6 +492,7 @@
   "lowest_ask": "最低賣單",
   "market_delivery": "市場交付",
   "market_feedback": "市場反饋",
+  "market_info": "市场信息",
   "market_listing": "市場列表",
   "market_price_change": "市場價格變化",
   "market_purchase": "市場購買",
